--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "state": "^0.2.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
